# medsecure-demo

./: README.md  dev.sh
.github/workflows/: deploy-api.yml  deploy-web.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/data/: compliance_mappings.json
backend/app/models/: schemas.py
backend/app/routers/: alerts.py  config.py  remediation.py  replay.py  reports.py  repos.py  scans.py
backend/app/services/: auth.py  backup.py  compliance.py  database.py  devin_client.py  github_client.py  llm_client.py  replay_recorder.py  repo_resolver.py  report_generator.py  token_counter.py
frontend/: .env.example  .gitignore  Dockerfile  components.json  middleware.ts  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
frontend/app/alerts/: page.tsx
frontend/app/api/auth/token/: route.ts
frontend/app/login/: page.tsx
frontend/app/remediation/: page.tsx
frontend/app/replay/: page.tsx
frontend/app/reports/: page.tsx
frontend/app/repos/: page.tsx
frontend/components/: component-example.tsx  nav-bar.tsx
frontend/lib/: api.ts  auth.ts  repo-context.tsx
frontend/scripts/: seed-users.ts  setup.ts
infra/: Caddyfile  deploy.sh  docker-compose.yml  setup.sh
infra/scripts/: backup-sqlite.sh  push-env-to-ssm.sh
infra/terraform/: ec2.tf  iam.tf  main.tf  outputs.tf  s3.tf  security_groups.tf  terraform.tfvars.example  variables.tf
